# NGS-Barcode-Count-C

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
src/: CMakeLists.txt  argparse.cpp  argparse.h  gzstream.hpp  info.cpp  info.h  input.cpp  input.h  main.cpp  parse.cpp  parse.h  parser.cpp  parser.h
