 add_definitions("-Wall" "-g" "--std=c++17" "-O3")
 add_executable(barcode-count main.cpp info.cpp input.cpp parser.cpp)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 target_link_libraries(barcode-count Threads::Threads)
 find_package(ZLIB REQUIRED)
 include_directories(${ZLIB_INCLUDE_DIRS})
 target_link_libraries(barcode-count ${ZLIB_LIBRARIES})
